# private-assistant-skill-coordinator-py

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  template.yaml
.devcontainer/: devcontainer.json
.github/workflows/: docker-build-action.yml  python_code_quality.yml
src/private_assistant_skill_coordinator/: config.py  coordinator.py  main.py  messages.py
tests/: test_coordinator.py
